# schema-pilot

./: .gitignore  README.md  pyproject.toml  schema-agent.yml
.github/: CODEOWNERS  settings.yml
.github/workflows/: protect-main.yml  schema-agent.yml
docs/: cli.md  diff.md  index.md  ir.md  planner-sqlgen.md  python-api.md  schema-hints.md
docs/adapters/: index.md
examples/after/: models.py
examples/before/: models.py
schema_agent/: __init__.py  cli.py
schema_agent/adapters/: base.py
schema_agent/adapters/sqlalchemy/: adapter.py
schema_agent/core/: diff.py  ir.py  registry.py  sched.py
schema_agent/core/planner/: postgres.py
schema_agent/core/sqlgen/: postgres.py
schema_agent/policy/: config.py  config_schema.py  hints.py
scripts/: demo.sh
tests/: test_cli_golden.py  test_diff_basic.py  test_sql_ordering.py
tests/golden/: forward.sql  rollback.sql
